# crs-dso

./: .gitignore  CMakeLists.txt  CMakePresets.json  LINUX_BUILD.md  README  build-debug.sh  crs-dso.kdev4
docs/: MACOS_BUILD.md  README.md  SIMULATION_TESTMODE_PLAN.md  USER_GUIDE.md  WINDOWS_BUILD.md
driver/: crs-dso.inf
icons/: Info.plist  README.txt  crs-dso.desktop  crs-dso.rc  icons.qrc
src/: CMakeLists.txt  main.cpp  signalgenerator.cpp  signalgenerator.h
src/core/: AcquisitionEngine.cpp  AcquisitionEngine.h  DeviceController.cpp  DeviceController.h  DeviceSettings.h  ScopeController.cpp  ScopeController.h  WaveformBuffer.h
src/protocol/: Crc16.cpp  Crc16.h  ProtocolCodec.cpp  ProtocolCodec.h  ProtocolDefs.h
src/qml/: ControlStepper.qml  Main.qml
src/transport/: ITransport.h  MockTransport.cpp  MockTransport.h  UsbTransport.cpp  UsbTransport.h
udev/: 99-crs-dso.rules
